manifests/jupyterhub/base/istio-peer-authentication.yaml
# Worker can't communicate with Head unless mTLS turned off
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  mtls:
    mode: PERMISSIVE
