manifests/jupyterhub/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    istio-injection : enabled
